# appCppReport

./: CMakeLists.txt  app.py  appGlobal.docx  apppUml.docx  crashs.db  dashboard.py  diag.xml  diagramsequ.md  explications_diagrameClass.md  main.py  notes.txt  questionsreposne.md  report.json  reportapp.json  req.txt  run.bat  sppechMd.md
src/: CMakeLists.txt  CoreDumpData.cpp  CoreDumpData.h  CoreDumpManager.cpp  CoreDumpManager.h  CrashAnalysis.cpp  CrashAnalysis.h  CrashExporterFactory.cpp  CrashExporterFactory.h  CsvCrashExporter.cpp  CsvCrashExporter.h  ICrashExporter.h  JsonCrashExporter.cpp  JsonCrashExporter.h  PlatformUtils.cpp  PlatformUtils.h  SystemMetrics.cpp  SystemMetrics.h  main.cpp  runig.bat
